--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.poetry]
 name = "motorcalc"
-version = "0.1.0"
+version = "0.1.1"
 description = "Calculation and plotting of DC motors"
 authors = ["Gerrit Kocherscheidt <kochersg@koco-group.com>"]
 license = "MIT"
 readme = "README.md"
+repository = "https://github.com/KOCOMOTION/motorcalc.git"
+keywords = ["DC motor","gearbox"]
+include = ["Berechnung von Gleichstrommotoren.ipynb"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
